--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "test"
   },
   "scripts": {
-    "publish-patch": "npm version patch -m \"Patch version\" && git push && npm publish",
+    "publish-patch": "npm version patch && git push && npm publish",
     "test": "jasmine --config=compliance/jasmine.json"
   },
   "repository": {
