--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "homepage": "https://github.com/m-ld/m-ld-spec#readme",
   "dependencies": {
     "jasmine": "^3.6.1",
-    "json-rql": "^0.4.0-1",
+    "json-rql": "^0.5.0",
     "node-fetch": "^2.6.0",
     "rxjs": "^6.6.2"
   },
