--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   },
   "homepage": "https://github.com/m-ld/m-ld-spec#readme",
   "dependencies": {
-    "jasmine": "^3.6.3",
-    "json-rql": "^0.5.0",
+    "jasmine": "^3.6.4",
+    "json-rql": "^0.6.0-2",
     "node-fetch": "^2.6.1",
     "rxjs": "^6.6.3"
   },
@@ -42,6 +42,6 @@
     "browser-sync": "^2.26.13",
     "onchange": "^7.1.0",
     "typedoc": "^0.19.2",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.3"
   }
 }
