--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   ],
   "scripts": {
     "test": "jasmine --config=compliance/jasmine.json",
+    "ver": "echo $npm_package_version",
     "build": "tsc && typedoc types/index.ts",
     "doc-dev": "onchange \"doc/**/*.*\" \"types/index.ts\" -- npm run build & browser-sync start --server _site --files _site"
   },
